--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "wginit"
 description = "Framework for initializing wgpu + winit"
 repository = "https://github.com/teenygame/wginit"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 license = "LGPL-3.0-or-later"
 
@@ -18,6 +18,13 @@ wasm-bindgen-futures = "0.4.43"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = "0.4.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+env_logger = "0.11"
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-logger = "0.2.0"
+console_error_panic_hook = "0.1.6"
 
 [package.metadata.docs.rs]
 targets = [
